# Skelly

./: LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  todo.txt
cogs/: avatar.py  clear.py  coinflip.py  kick.py  kickmember.py  meme.py  mute.py  slap.py  slowmode.py  smart.py  unmute.py
