[tool.poetry]
name = "repl_nix_Skelly"
version = "0.1.0"
description = ""
authors = ["Skellyy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
